# Telegram_store

./: .gitignore  GITHUB_SETUP.md  Procfile  README.md  backend.py  bot.py  config.py  database.py  deploy-to-railway.bat  deploy-to-railway.sh  push-to-github.bat  pyproject.toml  railway.json  requirements.txt  setup-github-repo.bat  test_notification.py
static/: app.js  style.css
templates/: index.html
