[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-store"
version = "1.0.0"
description = "Futuristic 3D Telegram Mini App Store"
authors = [
    {name = "Telegram Store Developer"}
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "aiogram",
    "jinja2",
    "requests"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["."]